# docs/src/examples/server.py
@@ -2,36 +2,32 @@ from typing import Optional
 from infragraph import Component, Device, DeviceEdge, DeviceEdgeIter, ComponentIter, LinkIter
 
 
-class DgxA100(Device):
-    def __init__(self, count: int, nic: Optional[Device] = None):
+class Server(Device):
+    def __init__(self, count: int, npu_factor: int = 1):
         """Adds an InfraGraph device to infrastructure based on the following components:
-        - 2 cpus
-        - 8 npus
-        - 4 pcie switches
-        - 8 nics
-        - 6 nvlink switches
+        - 1 cpu for every 4 npus
+        - X npus = npu_factor * 4
+        - 1 pcie switch for every 4 npus
+        - 1 nic for every npus connected to a pcie switch
+        - 1 nvswitch for all npus
         """
         super(Device, self).__init__()
-        self.name = "dgxa100"
+        self.name = "server"
         self.count = count
         self.connections = []
-        self.description = "Nvidia DGX-A100 System"
+        self.description = "A generic server with npu_factor * 4 npu(s)"
 
-        cpu = self.components.add(name="cpu", type=Component.CPU, description="AMD Epyc 7742 CPU")
+        cpu = self.components.add(name="cpu", type=Component.CPU, description="Generic CPU")
         npu = self.components.add(
-            name="npu", type=Component.NPU, external=True, description="Nvidia A100 GPU"
+            name="npu", type=Component.NPU, external=True, description="Generic GPU/NPU"
         )
         nvlsw = self.components.add(name="nvlsw", type=Component.CUSTOM, description="NVLink Switch")
         pciesw = self.components.add(
             name="pciesw", type=Component.CUSTOM, description="PCI Express Switch Gen 4"
         )
-        if nic is None:
-            self.components.add(name="nic", type=Component.NIC, description="Generic Nic")
-        else:
-            for c in nic.components:
-                self.components.add(name=c.name)
+        nic = self.components.add(name="nic", type=Component.NIC, description="Generic Nic")
 
-        fabric = self.links.add(name="fabric", description="AMD Infinity Fabric")
+        fabric = self.links.add(name="fabric", description="CPU Fabric")
         pcie = self.links.add(name="pcie")
 
         for idx in range(self.count):
@@ -49,5 +45,5 @@ class DgxA100(Device):
 
 
 if __name__ == "__main__":
-    device = DgxA100(count=4)
+    device = Server(count=1, npu_factor=2)
     print(device.serialize(encoding=Device.YAML))
